@@ -1,4 +1,5 @@
 2006-05-21  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_WriteGedcom.py: Repository export.
 	* src/GrampsDb/_GrampsInMemDB.py (GrampsInMemDB.__init__): Remove
 	unused variables.
 	* src/plugins/Calendar.py (print_page): Use correct variable.
